grammar/delphiParser.java
// Generated from delphi.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class delphiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, UNIT=2, INTF=3, IMPL=4, CLASS=5, EXTENDS=6, CONSTRUCTOR=7, 
		DESTRUCTOR=8, PROCEDURE=9, FUNCTION=10, PUBLIC=11, PRIVATE=12, PROTECTED=13, 
		TYPE=14, CONST=15, VAR=16, BEGIN=17, END=18, LABEL=19, USES=20, IF=21, 
		THEN=22, ELSE=23, FOR=24, TO=25, DO=26, WHILE=27, AND=28, OR=29, NOT=30, 
		DOT=31, COLON=32, SEMI=33, COMMA=34, LPAREN=35, RPAREN=36, ASSIGN=37, 
		EQUAL=38, NOT_EQUAL=39, LESS_THAN=40, GREATER_THAN=41, LESS_EQUAL=42, 
		GREATER_EQUAL=43, PLUS=44, MINUS=45, MULTIPLY=46, DIVIDE=47, IDENT=48, 
		NUM_INT=49, NUM_REAL=50, STRING=51, WS=52, COMMENT=53;
	public static final int
		RULE_program = 0, RULE_programHeading = 1, RULE_block = 2, RULE_declarations = 3, 
		RULE_declaration = 4, RULE_labelDeclPart = 5, RULE_constDefPart = 6, RULE_constDef = 7, 
		RULE_typeDefPart = 8, RULE_typeDef = 9, RULE_varDeclSection = 10, RULE_varDecl = 11, 
		RULE_procFuncDeclPart = 12, RULE_procDecl = 13, RULE_funcDecl = 14, RULE_classDecl = 15, 
		RULE_classBody = 16, RULE_memberSections = 17, RULE_memberSection = 18, 
		RULE_memberList = 19, RULE_memberDecl = 20, RULE_methodDecl = 21, RULE_constructorDecl = 22, 
		RULE_destructorDecl = 23, RULE_methodImplementations = 24, RULE_methodImplementation = 25, 
		RULE_functionImplementation = 26, RULE_procedureImplementation = 27, RULE_constructorImplementation = 28, 
		RULE_usesUnitsPart = 29, RULE_accessSpecifier = 30, RULE_paramList = 31, 
		RULE_paramDecl = 32, RULE_compoundStatement = 33, RULE_stmtList = 34, 
		RULE_stmt = 35, RULE_ifStmt = 36, RULE_whileStmt = 37, RULE_forStmt = 38, 
		RULE_varAssign = 39, RULE_memberAccess = 40, RULE_argList = 41, RULE_expr = 42, 
		RULE_simpleExpr = 43, RULE_complexExpr = 44, RULE_logicalOrExpr = 45, 
		RULE_logicalAndExpr = 46, RULE_equalityExpr = 47, RULE_relationalExpr = 48, 
		RULE_additiveExpr = 49, RULE_multiplicativeExpr = 50, RULE_unaryExpr = 51, 
		RULE_primaryExpr = 52, RULE_identifier = 53, RULE_label = 54, RULE_constantValue = 55, 
		RULE_identifierList = 56, RULE_typeIdentifier = 57;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programHeading", "block", "declarations", "declaration", 
			"labelDeclPart", "constDefPart", "constDef", "typeDefPart", "typeDef", 
			"varDeclSection", "varDecl", "procFuncDeclPart", "procDecl", "funcDecl", 
			"classDecl", "classBody", "memberSections", "memberSection", "memberList", 
			"memberDecl", "methodDecl", "constructorDecl", "destructorDecl", "methodImplementations", 
			"methodImplementation", "functionImplementation", "procedureImplementation", 
			"constructorImplementation", "usesUnitsPart", "accessSpecifier", "paramList", 
			"paramDecl", "compoundStatement", "stmtList", "stmt", "ifStmt", "whileStmt", 
			"forStmt", "varAssign", "memberAccess", "argList", "expr", "simpleExpr", 
			"complexExpr", "logicalOrExpr", "logicalAndExpr", "equalityExpr", "relationalExpr", 
			"additiveExpr", "multiplicativeExpr", "unaryExpr", "primaryExpr", "identifier", 
			"label", "constantValue", "identifierList", "typeIdentifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'PROGRAM'", "'UNIT'", "'INTERFACE'", "'IMPLEMENTATION'", "'CLASS'", 
			"'EXTENDS'", "'CONSTRUCTOR'", "'DESTRUCTOR'", "'PROCEDURE'", "'FUNCTION'", 
			"'PUBLIC'", "'PRIVATE'", "'PROTECTED'", "'TYPE'", "'CONST'", "'VAR'", 
			"'BEGIN'", "'END'", "'LABEL'", "'USES'", "'IF'", "'THEN'", "'ELSE'", 
			"'FOR'", "'TO'", "'DO'", "'WHILE'", "'AND'", "'OR'", "'NOT'", "'.'", 
			"':'", "';'", "','", "'('", "')'", "':='", "'='", "'<>'", "'<'", "'>'", 
			"'<='", "'>='", "'+'", "'-'", "'*'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAM", "UNIT", "INTF", "IMPL", "CLASS", "EXTENDS", "CONSTRUCTOR", 
			"DESTRUCTOR", "PROCEDURE", "FUNCTION", "PUBLIC", "PRIVATE", "PROTECTED", 
			"TYPE", "CONST", "VAR", "BEGIN", "END", "LABEL", "USES", "IF", "THEN", 
			"ELSE", "FOR", "TO", "DO", "WHILE", "AND", "OR", "NOT", "DOT", "COLON", 
			"SEMI", "COMMA", "LPAREN", "RPAREN", "ASSIGN", "EQUAL", "NOT_EQUAL", 
			"LESS_THAN", "GREATER_THAN", "LESS_EQUAL", "GREATER_EQUAL", "PLUS", "MINUS", 
			"MULTIPLY", "DIVIDE", "IDENT", "NUM_INT", "NUM_REAL", "STRING", "WS", 
			"COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "delphi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public delphiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeadingContext programHeading() {
			return getRuleContext(ProgramHeadingContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(delphiParser.DOT, 0); }
		public TerminalNode EOF() { return getToken(delphiParser.EOF, 0); }
		public TerminalNode INTF() { return getToken(delphiParser.INTF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			programHeading();
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INTF) {
				{
				setState(117);
				match(INTF);
				}
			}

			setState(120);
			block();
			setState(121);
			match(DOT);
			setState(122);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramHeadingContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(delphiParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(delphiParser.SEMI, 0); }
		public TerminalNode LPAREN() { return getToken(delphiParser.LPAREN, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(delphiParser.RPAREN, 0); }
		public TerminalNode UNIT() { return getToken(delphiParser.UNIT, 0); }
		public ProgramHeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeading; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterProgramHeading(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitProgramHeading(this);
		}
	}

	public final ProgramHeadingContext programHeading() throws RecognitionException {
		ProgramHeadingContext _localctx = new ProgramHeadingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeading);
		int _la;
		try {
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PROGRAM:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				match(PROGRAM);
				setState(125);
				identifier();
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(126);
					match(LPAREN);
					setState(127);
					identifierList();
					setState(128);
					match(RPAREN);
					}
				}

				setState(132);
				match(SEMI);
				}
				break;
			case UNIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				match(UNIT);
				setState(135);
				identifier();
				setState(136);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			declarations();
			setState(141);
			compoundStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationsContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitDeclarations(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1689136L) != 0)) {
				{
				{
				setState(143);
				declaration();
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public LabelDeclPartContext labelDeclPart() {
			return getRuleContext(LabelDeclPartContext.class,0);
		}
		public ConstDefPartContext constDefPart() {
			return getRuleContext(ConstDefPartContext.class,0);
		}
		public TypeDefPartContext typeDefPart() {
			return getRuleContext(TypeDefPartContext.class,0);
		}
		public VarDeclSectionContext varDeclSection() {
			return getRuleContext(VarDeclSectionContext.class,0);
		}
		public ProcFuncDeclPartContext procFuncDeclPart() {
			return getRuleContext(ProcFuncDeclPartContext.class,0);
		}
		public ClassDeclContext classDecl() {
			return getRuleContext(ClassDeclContext.class,0);
		}
		public UsesUnitsPartContext usesUnitsPart() {
			return getRuleContext(UsesUnitsPartContext.class,0);
		}
		public TerminalNode IMPL() { return getToken(delphiParser.IMPL, 0); }
		public TerminalNode SEMI() { return getToken(delphiParser.SEMI, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaration);
		try {
			setState(158);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LABEL:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				labelDeclPart();
				}
				break;
			case CONST:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				constDefPart();
				}
				break;
			case TYPE:
				enterOuterAlt(_localctx, 3);
				{
				setState(151);
				typeDefPart();
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 4);
				{
				setState(152);
				varDeclSection();
				}
				break;
			case PROCEDURE:
			case FUNCTION:
				enterOuterAlt(_localctx, 5);
				{
				setState(153);
				procFuncDeclPart();
				}
				break;
			case CLASS:
				enterOuterAlt(_localctx, 6);
				{
				setState(154);
				classDecl();
				}
				break;
			case USES:
				enterOuterAlt(_localctx, 7);
				{
				setState(155);
				usesUnitsPart();
				}
				break;
			case IMPL:
				enterOuterAlt(_localctx, 8);
				{
				setState(156);
				match(IMPL);
				setState(157);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LabelDeclPartContext extends ParserRuleContext {
		public TerminalNode LABEL() { return getToken(delphiParser.LABEL, 0); }
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public TerminalNode SEMI() { return getToken(delphiParser.SEMI, 0); }
		public List<TerminalNode> COMMA() { return getTokens(delphiParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(delphiParser.COMMA, i);
		}
		public LabelDeclPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_labelDeclPart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterLabelDeclPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitLabelDeclPart(this);
		}
	}

	public final LabelDeclPartContext labelDeclPart() throws RecognitionException {
		LabelDeclPartContext _localctx = new LabelDeclPartContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_labelDeclPart);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(LABEL);
			setState(161);
			label();
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(162);
				match(COMMA);
				setState(163);
				label();
				}
				}
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(169);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstDefPartContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(delphiParser.CONST, 0); }
		public List<ConstDefContext> constDef() {
			return getRuleContexts(ConstDefContext.class);
		}
		public ConstDefContext constDef(int i) {
			return getRuleContext(ConstDefContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(delphiParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(delphiParser.SEMI, i);
		}
		public ConstDefPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constDefPart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterConstDefPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitConstDefPart(this);
		}
	}

	public final ConstDefPartContext constDefPart() throws RecognitionException {
		ConstDefPartContext _localctx = new ConstDefPartContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constDefPart);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(CONST);
			setState(175); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(172);
				constDef();
				setState(173);
				match(SEMI);
				}
				}
				setState(177); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstDefContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(delphiParser.EQUAL, 0); }
		public ConstantValueContext constantValue() {
			return getRuleContext(ConstantValueContext.class,0);
		}
		public ConstDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterConstDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitConstDef(this);
		}
	}

	public final ConstDefContext constDef() throws RecognitionException {
		ConstDefContext _localctx = new ConstDefContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_constDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			identifier();
			setState(180);
			match(EQUAL);
			setState(181);
			constantValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeDefPartContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(delphiParser.TYPE, 0); }
		public List<TypeDefContext> typeDef() {
			return getRuleContexts(TypeDefContext.class);
		}
		public TypeDefContext typeDef(int i) {
			return getRuleContext(TypeDefContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(delphiParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(delphiParser.SEMI, i);
		}
		public TypeDefPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDefPart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterTypeDefPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitTypeDefPart(this);
		}
	}

	public final TypeDefPartContext typeDefPart() throws RecognitionException {
		TypeDefPartContext _localctx = new TypeDefPartContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_typeDefPart);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			match(TYPE);
			setState(187); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(184);
				typeDef();
				setState(185);
				match(SEMI);
				}
				}
				setState(189); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeDefContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(delphiParser.EQUAL, 0); }
		public TypeIdentifierContext typeIdentifier() {
			return getRuleContext(TypeIdentifierContext.class,0);
		}
		public TypeDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterTypeDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitTypeDef(this);
		}
	}

	public final TypeDefContext typeDef() throws RecognitionException {
		TypeDefContext _localctx = new TypeDefContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_typeDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			identifier();
			setState(192);
			match(EQUAL);
			setState(193);
			typeIdentifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
